test/tests/exec/expr/escape/basic/invalid_hex.txt
error: invalid hex escape sequence
 --> exec/expr/escape/basic/invalid_hex.tql:4:7
  |
4 |   x: "\xFH"
  |       ^^^^ 
  |
